[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/Botões/Game Over PNG/GameOver.png" type="Texture" id=1]
[ext_resource path="res://sprites/Botões/Game Over PNG/Botão Sair1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Botões/Game Over PNG/Botão Reiniciar1.png" type="Texture" id=3]
[ext_resource path="res://sprites/Botões/Game Over PNG/Botão Salvar1.png" type="Texture" id=4]
[ext_resource path="res://script/GameOver.gd" type="Script" id=5]
[ext_resource path="res://sprites/Botões/Game Over PNG/Botão Reiniciar2.png" type="Texture" id=6]
[ext_resource path="res://sprites/Botões/Game Over PNG/Botão Salvar2.png" type="Texture" id=7]
[ext_resource path="res://sprites/Botões/Game Over PNG/Botão Sair2.png" type="Texture" id=8]

[node name="GameOver" type="Control"]
light_mask = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainContainer"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="LeftPadding" type="MarginContainer" parent="CanvasLayer/MainContainer/HBoxContainer"]
margin_right = 516.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 720.0
custom_constants/separation = 20

[node name="TopPadding" type="MarginContainer" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 94.0
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 240.0
margin_bottom = 222.0
texture = ExtResource( 1 )

[node name="RestartButton" type="TextureButton" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 242.0
margin_right = 240.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 120, 54 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 240.0
margin_bottom = 478.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 240.0
margin_bottom = 606.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotPadding" type="MarginContainer" parent="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer"]
margin_top = 626.0
margin_right = 240.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="RightPadding" type="MarginContainer" parent="CanvasLayer/MainContainer/HBoxContainer"]
margin_left = 764.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3

[connection signal="pressed" from="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainContainer/HBoxContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
